# todo-cli-phase1

./: CONSTITUTION.md  README.md
.claude/: settings.local.json
frontend/: middleware.ts  tailwind.config.js
phase1/: CLAUDE.md
phase2/: CHUNK6_INTEGRATION_COMPLETE.md  CHUNK6_VALIDATION_CHECKLIST.md  CLAUDE.md  CONSTITUTION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_SETUP.md  PERFORMANCE_FIXES_SUMMARY.md  README.md  (+6 more)
phase2/backend/: .env.example  .gitignore  AUTHENTICATION_VERIFICATION.md  CLAUDE.md  CORS_UPDATE.md  DATABASE_LAYER_VERIFICATION.md  DEPLOYMENT.md  README.md  TASK_API_VERIFICATION.md  alembic.ini  pyproject.toml  railway.toml  render.yaml  requirements.txt
phase2/backend/alembic/: env.py
phase2/backend/alembic/versions/: 20260104_0100_create_tasks_table.py
phase2/backend/app/: __init__.py  auth.py  config.py  database.py  main.py
phase2/backend/app/application/interfaces/: task_repository.py
phase2/backend/app/application/use_cases/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  uncomplete_task.py  update_task.py
phase2/backend/app/domain/: exceptions.py
phase2/backend/app/domain/entities/: task.py
phase2/backend/app/domain/value_objects/: task_status.py
phase2/backend/app/infrastructure/: __init__.py  models.py
phase2/backend/app/infrastructure/repositories/: __init__.py  postgresql_task_repository.py
phase2/backend/app/presentation/: __init__.py
phase2/backend/app/presentation/routers/: __init__.py  tasks.py  user.py
phase2/backend/app/presentation/schemas/: __init__.py  task.py
(+129 files in other folders)
